add rever-proxy route to OSRM-Routed web service

--- a/nginx-proxy/application.nginx.conf
+++ b/nginx-proxy/application.nginx.conf
@@ -15,12 +15,19 @@ server {
 
 server {
     listen 443 ssl;
+
+    # TODO: Change all example.org occurrencies with your domain
     server_name example.org;
     
     location / {
-        proxy_pass http://example.org; #for demo purposes
+        # for demo purposes
+        # proxy_pass http://example.org;
+
+        # reverse-proxy to localhost port 5000, which is the OSRM-Roted web service
+        proxy_pass http://localhost:5000;
     }
 
+    # TODO: Change all example.org occurrencies with your domain
     ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
 
